--- a/frontend/register.html
+++ b/frontend/register.html
@@ -73,7 +73,7 @@
             e.preventDefault();
             const username = document.getElementById('username').value.trim();
             const email = document.getElementById('email').value.trim();
-            const password = document.getElementById('password').value;
+            const password = document.getElementById('password').value.trim();
 
             if (!username || !email || !password) {
                 document.getElementById('register-message').textContent = 'Please fill in all fields.';
