💬 Add styled teaser section for Training Log on homepage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,18 @@
             </div>
         </div>
 
+        <!-- Training Log Teaser -->
+        <section class="training-log-teaser">
+            <h2>🏃 Personal Training Log</h2>
+            <p>Track your weekly runs and visualize your ultramarathon journey.</p>
+            <p><strong>Connect your Strava account to unlock your personal log.</strong></p>
+            <div class="teaser-buttons">
+                <a href="login.html" class="orange-btn">Login</a>
+                <a href="register.html" class="gray-btn">Create Account</a>
+            </div>
+            <p class="note">🔒 Training Log is available only to logged-in users.</p>
+        </section>
+
         <!-- Race Map -->
         <section class="map-preview">
             <h2>Explore Upcoming Races</h2>
@@ -82,26 +94,11 @@
                 Directory</button>
         </section>
 
-
         <!-- Forum Preview -->
         <section class="latest-posts">
             <h2>Recent Conversations</h2>
             <div id="forum-preview-list" class="forum-preview-list"></div>
             <button class="orange-btn" onclick="window.location.href='forum.html'">View All Posts</button>
-        </section>
-
-        <!-- Training Log Teaser (for guests only) -->
-        <section class="training-log-teaser" id="trainingLogTeaser" style="display: none;">
-            <div class="teaser-box">
-                <h2>🏃‍♀️ Personal Training Log</h2>
-                <p>Track your weekly runs and visualize your ultramarathon journey.</p>
-                <p><strong>Connect your Strava account to unlock your personal log.</strong></p>
-                <div class="teaser-actions">
-                    <a href="login.html" class="orange-btn">Login</a>
-                    <a href="register.html" class="gray-btn">Create Account</a>
-                </div>
-                <p class="lock-note">🔒 Training Log is available only to logged-in users.</p>
-            </div>
         </section>
 
         <!-- Article Carousel -->
